<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background">

    <!-- AppBarLayout with Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:title="@string/movie_search"
            android:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Movie Poster -->
    <ImageView
        android:id="@+id/detailPoster"
        android:layout_width="0dp"
        android:layout_height="600dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/detailPoster"
        android:padding="16dp">

        <!-- Movie Title -->
        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_title2"
            android:textColor="@color/text_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Movie Year -->
        <TextView
            android:id="@+id/detailYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1985"
            android:textColor="@color/text_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailTitle" />

        <!-- Movie Runtime -->
        <TextView
            android:id="@+id/detailRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_116_min"
            android:textColor="@color/text_title"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/detailYear"
            app:layout_constraintTop_toBottomOf="@id/detailTitle" />

        <!-- Movie Genre -->
        <TextView
            android:id="@+id/detailGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/adventure_comedy_sci_fi"
            android:textColor="@color/text_title"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/detailRuntime"
            app:layout_constraintTop_toBottomOf="@id/detailTitle" />

        <!-- Movie Rating -->
        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8_5"
            android:textColor="#FFC107"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailTitle" />

        <!-- Movie Description -->
        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/movie_description_goes_here"
            android:textColor="@color/text_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailYear" />

        <!-- Go Back Button -->
        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/go_back"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
