<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <!-- Movie Poster -->
        <ImageView
            android:id="@+id/favPoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_image_placeholder" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:layout_marginStart="8dp">

            <!-- Movie Title -->
            <TextView
                android:id="@+id/favTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/text_title"
                android:maxLines="2"
                android:ellipsize="end" />

            <!-- Studio -->
            <TextView
                android:id="@+id/favStudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studio_name"
                android:textSize="16sp"
                android:textColor="@color/text_year"
                android:layout_marginTop="4dp" />

            <!-- Critics Rating -->
            <TextView
                android:id="@+id/favRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdb_rating_8_5"
                android:textSize="16sp"
                android:textColor="@android:color/holo_orange_light"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>